<resources>
    <string name="app_name">Calculator</string>

    <string name="b_0">0</string>
    <string name="b_1">1</string>
    <string name="b_2">2</string>
    <string name="b_3">3</string>
    <string name="b_4">4</string>
    <string name="b_5">5</string>
    <string name="b_6">6</string>
    <string name="b_7">7</string>
    <string name="b_8">8</string>
    <string name="b_9">9</string>
    <string name="b_multiply">*</string>
    <string name="b_divide">/</string>
    <string name="b_add">+</string>
    <string name="b_subtract">-</string>
    <string name="b_del">&lt;-</string>
    <string name="b_ac">AC</string>
    <string name="b_plus_minus">+/-</string>
    <string name="b_equals">=</string>
    <string name="b_decimal">.</string>
</resources>
