<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#283e63"
    tools:context="com.muoq.calculator.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/expression_input_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:autoSizeMaxTextSize="70dp"
            android:autoSizeMinTextSize="70dp"
            android:autoText="false"
            android:background="#415f91"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|end"
            android:paddingRight="10dp"
            android:text="0"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="54dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/linearLayout"
                    android:layout_weight="1"
                    android:text="@string/b_7" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_8" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_9" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_del"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_del" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_ac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_ac" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_4" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_5" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_6" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_multiply" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_divide" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_1" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_2" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_3" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_add" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_subtract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_subtract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.muoq.calculator.ui.RectangleButton
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/b_0" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_decimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_decimal" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_plus_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_plus_minus" />

                <com.muoq.calculator.ui.SquareButton
                    android:id="@+id/btn_equals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_equals" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/expression_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expression_input_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:textSize="28dp"
            android:textColor="#ffffff"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

